k8s-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.rittik.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 80

      - path: /aws
        pathType: Prefix
        backend:
          service:
            name: aws-service
            port:
              number: 80

      - path: /azure
        pathType: Prefix
        backend:
          service:
            name: azure-service
            port:
              number: 80

      - path: /gcp
        pathType: Prefix
        backend:
          service:
            name: gcp-service
            port:
              number: 80
